--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -62,3 +62,11 @@
         url : https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
         dest: /usr/local/bin/docker-compose
         mode: '755'
+
+- name: Build container
+  hosts: prod
+  become: true
+  gather_facts: yes
+  
+  tasks:
+    shell: "mkdir /opt/test"
