Add prod server

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -3,70 +3,13 @@
   become: true
   gather_facts: yes
 
-  vars:
-    user: ubuntu
+  roles:
+    - docker
   
-  tasks:
-    - name: Install git
-      apt:
-        name: git
-        state: present
-
-    - name: Copy repository
-      git:
-        repo: https://github.com/uladzimirzel/juntest
-        dest: /home/{{ user }}/test2
-        clone: yes
-        update: yes
-
-    - name: Install Docker and docker-compose from host
-      apt:
-        name:
-          - apt-transport-https
-          - ca-certificates
-          - curl
-          - gnupg-agent
-          - software-properties-common
-        state: latest
-        update_cache: yes
-
-    - name: GPG key
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: repository docker
-      apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable
-        state: present
-
-    - name: install docker
-      apt:
-        name:
-          - docker-ce
-          - docker-ce-cli
-          - containerd.io
-        state: latest
-        update_cache: yes
-
-    - name: adding users to group docker
-      user:
-        name: '{{ item }}'
-        groups: docker
-        append: yes
-      loop:
-        - ubuntu
-    
-    - name: Install docker-compose
-      get_url:
-        url : https://github.com/docker/compose/releases/download/1.29.2/docker-compose-Linux-x86_64
-        dest: /usr/local/bin/docker-compose
-        mode: '755'
-
-- name: Build container
+- name: Prod container
   hosts: prod
   become: true
   gather_facts: yes
-  
-  tasks:
-    shell: "mkdir /opt/test"
+
+  roles:
+   - folder
